Configure Maven, JReleaser, and GitHub for one-lick releases